Fix notifications positioning on mobile (3.6rem from top)

--- a/styles/main.css
+++ b/styles/main.css
@@ -327,9 +327,10 @@ main > section > article input[name="filter"]{
 }
 
 main > aside#notifications{
-	position: absolute;
-	top: 0;
+	position: fixed;
+	top: 3.6rem;
 	right: 0;
+	z-index: 100;
 }
 
 main > aside#notifications > div{
@@ -353,6 +354,9 @@ main > aside#notifications > div::before{
 
 /* Responsive */
 @media screen and (min-width: 768px) {
+	main > aside#notifications {
+		top: 0;
+	}
 	body {
 		flex-direction: column-reverse;
 	}
